--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Laboratorio 03</title>
+    <title>Tarea03</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
